<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Auto-Rotate Widget</string>
    <string name="title_activity_my">Auto-Rotate Widget</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="switch_orientation">Switch!</string>
    <string name="textView">Add the special designed widget to your home screen, turing auto-rotate on and off has never been so easy.</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="instruction">How to add widget?</string>
    <string name="steps">
        1. Press and hold an empty space on home screen.\n2. In the pop-menu, tap Add widgets.\n3. Find the Auto-Rotate Widget icon below, press and hold, add it to home screen.
    </string>
    <string name="step5">5. Touch the widget to get what you want.</string>
</resources>