<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="#000"
    tools:context="com.example.gengyixiong.asoswitch.MyActivity">
    <TextView
        android:id="@+id/myTextView"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/textView"
        android:textSize="20dp"
        android:textColor="#ccc"/>
    <TextView
        android:id="@+id/instruction"
        android:layout_below="@id/myTextView"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/instruction"
        android:gravity="center_horizontal"
        android:textSize="30dp"
        android:textColor="#ccc"
        android:padding="5dp"/>
    <TextView
        android:id="@+id/steps"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/instruction"
        android:text="@string/steps"
        android:textSize="20dp"
        android:textColor="#ccc"/>
    <ImageView
        android:layout_margin="10dp"
        android:id="@+id/icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/steps"
        android:layout_centerHorizontal="true"
        android:background="@drawable/widget_preview"/>
    <TextView
        android:id="@+id/step5"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/icon"
        android:text="@string/step5"
        android:textSize="20dp"
        android:textColor="#ccc"/>
    <Button
        android:id="@+id/mySwitch"
        android:layout_alignParentBottom="true"
        android:text="@string/switch_orientation"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textColor="#ccc"
        android:shadowColor="#aaa"/>

</RelativeLayout>
